# usb_ncm_net

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  app.overlay  dtls.conf  justfile  minimal.conf  oscore.conf  perf.conf  prj.conf  sections-ram.ld  sections-rwdata.ld  west.yml
certs/: coaps-server-cert.der  coaps-server-key.der
docs/: benchmarks.md  edhoc-oscore-plan.md  memory-footprint.md
host_client/: CMakeLists.txt  edhoc_config.h
host_client/src/: client.cpp
include/: coap_server.h  usbd_setup.h
scripts/: coap_cli.py  coap_latency.py  edhoc_keys.py  edhoc_oscore_client.py  requirements.txt
src/: coap_server.c  edhoc_oscore.c  main.c  usbd_setup.c
